[package]
name = "preq_ngin"
version = "0.1.0"
authors = ["drbh <david.richard.holtz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
sublime_fuzzy = "0.6.0"
reqwest = "0.9.22"

serde = "1.0.101"
serde_derive = "1.0.101"

walkdir = "2"

scraper = "0.11.0"

serde_json = "1.0"

actix-web = "1.0.8"

json = "0.12.0"
bytes = "0.4"
futures = "0.1"
env_logger = "0.7.1"